@@ -1,92 +1,54 @@
 
 package com.pseudorygium.item;
 
-import net.neoforged.neoforge.registries.RegisterEvent;
-import net.neoforged.neoforge.registries.DeferredHolder;
-import net.neoforged.neoforge.client.extensions.common.RegisterClientExtensionsEvent;
-import net.neoforged.neoforge.client.extensions.common.IClientItemExtensions;
-import net.neoforged.fml.common.EventBusSubscriber;
-import net.neoforged.bus.api.SubscribeEvent;
-
-import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.item.ArmorMaterial;
-import net.minecraft.world.item.ArmorItem;
-import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.EquipmentSlot;
-import net.minecraft.world.entity.Entity;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.core.registries.Registries;
-import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.core.Holder;
-import net.minecraft.client.model.geom.ModelPart;
-import net.minecraft.client.model.HumanoidModel;
-import net.minecraft.client.Minecraft;
-import net.minecraft.Util;
-
 import java.util.Map;
-import java.util.List;
-import java.util.EnumMap;
-import java.util.Collections;
-
-import com.pseudorygium.init.PseudorygiumModItems;
-import com.pseudorygium.client.model.Modelleafcrown;
+import java.util.function.Consumer;
+import net.minecraft.client.model.Model;
 
 @EventBusSubscriber(bus = EventBusSubscriber.Bus.MOD)
 public abstract class LeafCrownItem extends ArmorItem {
-	public static Holder<ArmorMaterial> ARMOR_MATERIAL = null;
 
-	@SubscribeEvent
-	public static void registerArmorMaterial(RegisterEvent event) {
-		event.register(Registries.ARMOR_MATERIAL, registerHelper -> {
-			ArmorMaterial armorMaterial = new ArmorMaterial(Util.make(new EnumMap<>(ArmorItem.Type.class), map -> {
-				map.put(ArmorItem.Type.BOOTS, 2);
-				map.put(ArmorItem.Type.LEGGINGS, 5);
-				map.put(ArmorItem.Type.CHESTPLATE, 6);
-				map.put(ArmorItem.Type.HELMET, 2);
-				map.put(ArmorItem.Type.BODY, 6);
-			}), 9, DeferredHolder.create(Registries.SOUND_EVENT, ResourceLocation.parse("block.grass.place")), () -> Ingredient.of(new ItemStack(PseudorygiumModItems.LEAF.get())),
-					List.of(new ArmorMaterial.Layer(ResourceLocation.parse("pseudorygium:leaf"))), 0f, 0f);
-			registerHelper.register(ResourceLocation.parse("pseudorygium:leaf_crown"), armorMaterial);
-			ARMOR_MATERIAL = BuiltInRegistries.ARMOR_MATERIAL.wrapAsHolder(armorMaterial);
-		});
-	}
+	public static ArmorMaterial ARMOR_MATERIAL = new ArmorMaterial(25, Map.of(ArmorType.BOOTS, 2, ArmorType.LEGGINGS, 5, ArmorType.CHESTPLATE, 6, ArmorType.HELMET, 2, ArmorType.BODY, 6), 9,
+			DeferredHolder.create(Registries.SOUND_EVENT, ResourceLocation.parse("block.grass.place")), 0f, 0f, TagKey.create(Registries.ITEM, ResourceLocation.parse("pseudorygium:leaf_crown_repair_items")),
+			ResourceKey.create(EquipmentAssets.ROOT_ID, ResourceLocation.parse("pseudorygium:leaf_crown")));
 
 	@SubscribeEvent
 	public static void registerItemExtensions(RegisterClientExtensionsEvent event) {
 		event.registerItem(new IClientItemExtensions() {
 			@Override
-			public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-				HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-						Map.of("head", new Modelleafcrown(Minecraft.getInstance().getEntityModels().bakeLayer(Modelleafcrown.LAYER_LOCATION)).crown, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
-								new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-								"right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
-				armorModel.crouching = living.isShiftKeyDown();
-				armorModel.riding = defaultModel.riding;
-				armorModel.young = living.isBaby();
-				return armorModel;
+			public HumanoidModel getHumanoidArmorModel(ItemStack itemStack, EquipmentClientInfo.LayerType layerType, Model original) {
+				ModelPart head = new Modelleafcrown(Minecraft.getInstance().getEntityModels().bakeLayer(Modelleafcrown.LAYER_LOCATION)).crown;
+				head.setInitialPose(PartPose.rotation(0, (float) (Math.PI), 0));
+				head.resetPose();
+				return new HumanoidModel(new ModelPart(Collections.emptyList(),
+						Map.of("head", new ModelPart(Collections.emptyList(), Map.of("head", head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()))), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+								"right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg",
+								new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+			}
+
+			@Override
+			public ResourceLocation getArmorTexture(ItemStack stack, EquipmentClientInfo.LayerType type, EquipmentClientInfo.Layer layer, ResourceLocation _default) {
+				return ResourceLocation.parse("pseudorygium:textures/entities/leafcrown.png");
 			}
 		}, PseudorygiumModItems.LEAF_CROWN_HELMET.get());
+
 	}
 
-	public LeafCrownItem(ArmorItem.Type type, Item.Properties properties) {
+	private LeafCrownItem(ArmorType type, Item.Properties properties) {
 		super(ARMOR_MATERIAL, type, properties);
 	}
 
 	public static class Helmet extends LeafCrownItem {
-		public Helmet() {
-			super(ArmorItem.Type.HELMET, new Item.Properties().durability(ArmorItem.Type.HELMET.getDurability(25)));
-		}
 
-		@Override
-		public ResourceLocation getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, ArmorMaterial.Layer layer, boolean innerModel) {
-			return ResourceLocation.parse("pseudorygium:textures/entities/leafcrown.png");
+		public Helmet(Item.Properties properties) {
+			super(ArmorType.HELMET, properties);
 		}
 
 		@Override
 		public boolean makesPiglinsNeutral(ItemStack itemstack, LivingEntity entity) {
 			return true;
 		}
+
 	}
+
 }
